Fix spacing around header/main/footer

--- a/assets/sass/app.scss
+++ b/assets/sass/app.scss
@@ -35,3 +35,7 @@ main {
         display: none !important;
     }
 }
+
+.py-block {
+    padding-block: var(--pico-block-spacing-vertical);
+}
